merge with rr graph changes