@@ -13,14 +13,20 @@ function test_samples() {
   ./addressbook dwrite | ./addressbook dread
   rm -f /tmp/capnp-calculator-example-$$
   ./calculator-server unix:/tmp/capnp-calculator-example-$$ &
-  sleep 0.1
+  local SERVER_PID=$!
+  sleep 1
   ./calculator-client unix:/tmp/capnp-calculator-example-$$
-  kill %+
-  wait %+ || true
+  # `kill %./calculator-server` doesn't seem to work on recent Cygwins, but we can kill by PID.
+  kill -9 $SERVER_PID
+  # This `fg` will fail if bash happens to have already noticed the quit and reaped the process
+  # before `fg` is invoked, so in that case we just proceed.
+  fg %./calculator-server || true
   rm -f /tmp/capnp-calculator-example-$$
 }
 
 QUICK=
+CPP_FEATURES=
+EXTRA_LIBS=
 
 PARALLEL=$(nproc 2>/dev/null || echo 1)
 
@@ -36,6 +42,30 @@ while [ $# -gt 0 ]; do
       ;;  # nothing
     quick )
       QUICK=quick
+      ;;
+    cpp-features )
+      if [ "$#" -lt 2 ] || [ -n "$CPP_FEATURES" ]; then
+        echo "usage: $0 cpp-features CPP_DEFINES" >&2
+        echo "e.g. $0 cpp-features '-DSOME_VAR=5 -DSOME_OTHER_VAR=6'" >&2
+        if [ -n "$CPP_FEATURES" ]; then
+          echo "cpp-features provided multiple times" >&2
+        fi
+        exit 1
+      fi
+      CPP_FEATURES="$2"
+      shift
+      ;;
+    extra-libs )
+      if [ "$#" -lt 2 ] || [ -n "$EXTRA_LIBS" ]; then
+        echo "usage: $0 extra-libs EXTRA_LIBS" >&2
+        echo "e.g. $0 extra-libs '-lrt'" >&2
+        if [ -n "$EXTRA_LIBS" ]; then
+          echo "extra-libs provided multiple times" >&2
+        fi
+        exit 1
+      fi
+      EXTRA_LIBS="$2"
+      shift
       ;;
     caffeinate )
       # Re-run preventing sleep.
@@ -91,17 +121,17 @@ while [ $# -gt 0 ]; do
       export CXX="$2"
       shift
       ;;
-    clang )
-      export CXX=clang++
+    clang* )
+      export CXX=clang++${1#clang}
+      if [ "$1" != "clang-5.0" ]; then
+        export LIB_FUZZING_ENGINE=-fsanitize=fuzzer
+      fi
       ;;
-    gcc-4.9 )
-      export CXX=g++-4.9
+    gcc* )
+      export CXX=g++${1#gcc}
       ;;
-    gcc-4.8 )
-      export CXX=g++-4.8
-      ;;
-    gcc-4.7 )
-      export CXX=g++-4.7
+    g++* )
+      export CXX=$1
       ;;
     mingw )
       if [ "$#" -ne 2 ]; then
@@ -116,7 +146,7 @@ while [ $# -gt 0 ]; do
 
       export WINEPATH='Z:\usr\'"$CROSS_HOST"'\lib;Z:\usr\lib\gcc\'"$CROSS_HOST"'\6.3-win32;Z:'"$PWD"'\.libs'
 
-      doit ./configure --host="$CROSS_HOST" --disable-shared CXXFLAGS='-static-libgcc -static-libstdc++'
+      doit ./configure --host="$CROSS_HOST" --disable-shared CXXFLAGS="-static-libgcc -static-libstdc++ $CPP_FEATURES" LIBS="$EXTRA_LIBS"
 
       doit make -j$PARALLEL check
       doit make distclean
@@ -126,18 +156,19 @@ while [ $# -gt 0 ]; do
     android )
       # To install Android SDK:
       # - Download command-line tools: https://developer.android.com/studio/index.html#command-tools
-      # - export SDKMANAGER_OPTS="--add-modules java.se.ee"
       # - Run $SDK_HOME/tools/bin/sdkmanager platform-tools 'platforms;android-25' 'system-images;android-25;google_apis;armeabi-v7a' emulator 'build-tools;25.0.2' ndk-bundle
-      # - export AVDMANAGER_OPTS="--add-modules java.se.ee"
       # - Run $SDK_HOME/tools/bin/avdmanager create avd -n capnp -k 'system-images;android-25;google_apis;armeabi-v7a' -b google_apis/armeabi-v7a
-      # - Run $SDK_HOME/ndk-bundle/build/tools/make_standalone_toolchain.py --arch arm --api 24 --install-dir $TOOLCHAIN_HOME
       if [ "$#" -ne 4 ]; then
-        echo "usage: $0 android SDK_HOME TOOLCHAIN_HOME CROSS_HOST" >&2
+        echo "usage: $0 android SDK_HOME CROSS_HOST COMPILER_PREFIX" >&2
+        echo
+        echo "SDK_HOME: Location where android-sdk is installed." >&2
+        echo "CROSS_HOST: E.g. arm-linux-androideabi" >&2
+        echo "COMPILER_PREFIX: E.g. armv7a-linux-androideabi24" >&2
         exit 1
       fi
       SDK_HOME=$2
-      TOOLCHAIN_HOME=$3
-      CROSS_HOST=$4
+      CROSS_HOST=$3
+      COMPILER_PREFIX=$4
 
       cd c++
       test -e configure || doit autoreconf -i
@@ -148,9 +179,9 @@ while [ $# -gt 0 ]; do
       cp capnp capnp-host
       cp capnpc-c++ capnpc-c++-host
 
-      export PATH="$TOOLCHAIN_HOME/bin:$PATH"
+      export PATH="$SDK_HOME/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH"
       doit make distclean
-      doit ./configure --host="$CROSS_HOST" CC=clang CXX=clang++ --with-external-capnp --disable-shared CXXFLAGS='-fPIE' LDFLAGS='-pie' LIBS='-static-libstdc++ -static-libgcc -ldl' CAPNP=./capnp-host CAPNPC_CXX=./capnpc-c++-host
+      doit ./configure --host="$CROSS_HOST" CC="$COMPILER_PREFIX-clang" CXX="$COMPILER_PREFIX-clang++" --with-external-capnp --disable-shared CXXFLAGS="-fPIE $CPP_FEATURES" LDFLAGS='-pie' LIBS="-static-libstdc++ -static-libgcc -ldl $EXTRA_LIBS" CAPNP=./capnp-host CAPNPC_CXX=./capnpc-c++-host
 
       doit make -j$PARALLEL
       doit make -j$PARALLEL capnp-test
@@ -317,7 +348,14 @@ done
 # sign-compare warnings than probably all other warnings combined and I've never seen it flag a
 # real problem. Disable unused parameters because it's stupidly noisy and never a real problem.
 # Enable expensive release-gating tests.
-export CXXFLAGS="-O2 -DDEBUG -Wall -Wextra -Werror -Wno-strict-aliasing -Wno-sign-compare -Wno-unused-parameter -DCAPNP_EXPENSIVE_TESTS=1"
+export CXXFLAGS="-O2 -DDEBUG -Wall -Wextra -Werror -Wno-strict-aliasing -Wno-sign-compare -Wno-unused-parameter -DCAPNP_EXPENSIVE_TESTS=1 ${CPP_FEATURES}"
+export LIBS="$EXTRA_LIBS"
+
+if [ "${CXX:-}" != "g++-5" ]; then
+  # This warning flag is missing on g++-5 but available on all other GCC/Clang versions we target
+  # in CI.
+  export CXXFLAGS="$CXXFLAGS -Wimplicit-fallthrough"
+fi
 
 STAGING=$PWD/tmp-staging
 
@@ -338,7 +376,20 @@ echo "Building c++"
 echo "========================================================================="
 
 # Apple now aliases gcc to clang, so probe to find out what compiler we're really using.
-if (${CXX:-g++} -dM -E -x c++ /dev/null 2>&1 | grep -q '__clang__'); then
+#
+# NOTE: You might be tempted to use `grep -q` here instead of sending output to /dev/null. However,
+#   we cannot, because `grep -q` exits immediately upon seeing a match. If it exits too soon, the
+#   first stage of the pipeline gets killed, and the whole expression is considered to have failed
+#   since we are running bash with the `pipefail` option enabled.
+# FUN STORY: We used to use grep -q. One day, we found that Clang 9 when running under GitHub
+#   Actions was detected as *not* Clang. But if we ran it twice, it would succeed on the second
+#   try. It turns out that under previous versions of Clang, the `__clang__` define was pretty
+#   close to the end of the list, so it always managed to write the whole list before `grep -q`
+#   exited. But under Clang 9, there's a bunch more defines after this one, giving more time for
+#   `grep -q` to exit and break everything. But if the compiler had executed once recently then
+#   the second run would go faster due to caching (I guess) and manage to get all the data out
+#   to the buffer in time.
+if (${CXX:-g++} -dM -E -x c++ /dev/null 2>&1 | grep '__clang__' > /dev/null); then
   IS_CLANG=yes
   DISABLE_OPTIMIZATION_IF_GCC=
 else
@@ -358,13 +409,13 @@ fi
 
 cd c++
 doit autoreconf -i
-doit ./configure --prefix="$STAGING"
+doit ./configure --prefix="$STAGING" || (cat config.log && exit 1)
 doit make -j$PARALLEL check
 
 if [ $IS_CLANG = no ]; then
   # Verify that generated code compiles with pedantic warnings.  Make sure to treat capnp headers
   # as system headers so warnings in them are ignored.
-  doit ${CXX:-g++} -isystem src -std=c++1y -fno-permissive -pedantic -Wall -Wextra -Werror \
+  doit ${CXX:-g++} -isystem src -std=c++14 -fno-permissive -pedantic -Wall -Wextra -Werror \
       -c src/capnp/test.capnp.c++ -o /dev/null
 fi
 
@@ -380,13 +431,13 @@ test "x$(which capnpc-c++)" = "x$STAGING/bin/capnpc-c++"
 cd samples
 
 doit capnp compile -oc++ addressbook.capnp -I"$STAGING"/include --no-standard-import
-doit ${CXX:-g++} -std=c++1y addressbook.c++ addressbook.capnp.c++ -o addressbook \
+doit ${CXX:-g++} -std=c++14 addressbook.c++ addressbook.capnp.c++ -o addressbook \
     $CXXFLAGS $(pkg-config --cflags --libs capnp)
 
 doit capnp compile -oc++ calculator.capnp -I"$STAGING"/include --no-standard-import
-doit ${CXX:-g++} -std=c++1y calculator-client.c++ calculator.capnp.c++ -o calculator-client \
+doit ${CXX:-g++} -std=c++14 calculator-client.c++ calculator.capnp.c++ -o calculator-client \
     $CXXFLAGS $(pkg-config --cflags --libs capnp-rpc)
-doit ${CXX:-g++} -std=c++1y calculator-server.c++ calculator.capnp.c++ -o calculator-server \
+doit ${CXX:-g++} -std=c++14 calculator-server.c++ calculator.capnp.c++ -o calculator-server \
     $CXXFLAGS $(pkg-config --cflags --libs capnp-rpc)
 
 test_samples
@@ -412,16 +463,7 @@ if [ "$QUICK" = quick ]; then
 fi
 
 echo "========================================================================="
-echo "Testing --with-external-capnp"
-echo "========================================================================="
-
-doit make distclean
-doit ./configure --prefix="$STAGING" --disable-shared \
-    --with-external-capnp CAPNP=$STAGING/bin/capnp
-doit make -j$PARALLEL check
-
-echo "========================================================================="
-echo "Testing --disable-reflection"
+echo "Testing --with-external-capnp and --disable-reflection"
 echo "========================================================================="
 
 doit make distclean
@@ -431,32 +473,20 @@ doit make -j$PARALLEL check
 doit make distclean
 
 # Test 32-bit build now while we have $STAGING available for cross-compiling.
-if [ "x`uname -m`" = "xx86_64" ]; then
+#
+# Cygwin64 can cross-compile to Cygwin32 but can't actually run the cross-compiled binaries. Let's
+# just skip this test on Cygwin since it's so slow and honestly no one cares.
+#
+# MacOS apparently no longer distributes 32-bit standard libraries. OK fine let's restrict this to
+# Linux.
+if [ "x`uname -m`" = "xx86_64" ] && [ "x`uname`" = xLinux ]; then
   echo "========================================================================="
   echo "Testing 32-bit build"
   echo "========================================================================="
 
-  if [[ "`uname`" =~ CYGWIN ]]; then
-    # It's just not possible to run cygwin32 binaries from within cygwin64.
-
-    # Build as if we are cross-compiling, using the capnp we installed to $STAGING.
-    doit ./configure --prefix="$STAGING" --disable-shared --host=i686-pc-cygwin \
-        --with-external-capnp CAPNP=$STAGING/bin/capnp
-    doit make -j$PARALLEL
-    doit make -j$PARALLEL capnp-test.exe
-
-    # Expect a cygwin32 sshd to be listening at localhost port 2222, and use it
-    # to run the tests.
-    doit scp -P 2222 capnp-test.exe localhost:~/tmp-capnp-test.exe
-    doit ssh -p 2222 localhost './tmp-capnp-test.exe && rm tmp-capnp-test.exe'
-
-    doit make distclean
-
-  elif [ "x${CXX:-g++}" != "xg++-4.8" ]; then
-    doit ./configure CXX="${CXX:-g++} -m32" CXXFLAGS="$CXXFLAGS ${ADDL_M32_FLAGS:-}" --disable-shared
-    doit make -j$PARALLEL check
-    doit make distclean
-  fi
+  doit ./configure CXX="${CXX:-g++} -m32" CXXFLAGS="$CXXFLAGS ${ADDL_M32_FLAGS:-}" --disable-shared
+  doit make -j$PARALLEL check
+  doit make distclean
 fi
 
 echo "========================================================================="
@@ -493,32 +523,23 @@ echo "========================================================================="
 # is inlined in hundreds of other places without issue, so I have no idea how to narrow down the
 # bug. Clang works fine. So, for now, we disable optimizations on GCC for -fno-exceptions tests.
 
-doit ./configure --disable-shared CXXFLAGS="$CXXFLAGS -fno-rtti"
-doit make -j$PARALLEL check
-doit make distclean
-doit ./configure --disable-shared CXXFLAGS="$CXXFLAGS -fno-exceptions $DISABLE_OPTIMIZATION_IF_GCC"
-doit make -j$PARALLEL check
-doit make distclean
 doit ./configure --disable-shared CXXFLAGS="$CXXFLAGS -fno-rtti -fno-exceptions $DISABLE_OPTIMIZATION_IF_GCC"
 doit make -j$PARALLEL check
 
-# Valgrind is currently "experimental and mostly broken" on OSX and fails to run the full test
-# suite, but I have it installed because it did manage to help me track down a bug or two.  Anyway,
-# skip it on OSX for now.
-if [ "x`uname`" != xDarwin ] && which valgrind > /dev/null; then
+if [ "x`uname`" = xLinux ]; then
   doit make distclean
 
   echo "========================================================================="
   echo "Testing with valgrind"
   echo "========================================================================="
 
-  doit ./configure --disable-shared CXXFLAGS="-g"
+  doit ./configure --disable-shared CXXFLAGS="-g $CPP_FEATURES"
   doit make -j$PARALLEL
   doit make -j$PARALLEL capnp-test
   # Running the fuzz tests under Valgrind is a great thing to do -- but it takes
   # some 40 minutes. So, it needs to be done as a separate step of the release
   # process, perhaps along with the AFL tests.
-  CAPNP_SKIP_FUZZ_TEST=1 doit valgrind --leak-check=full --track-fds=yes --error-exitcode=1 --child-silent-after-fork=yes --sim-hints=lax-ioctls ./capnp-test
+  CAPNP_SKIP_FUZZ_TEST=1 doit valgrind --leak-check=full --track-fds=yes --error-exitcode=1 --child-silent-after-fork=yes --sim-hints=lax-ioctls --suppressions=valgrind.supp ./capnp-test
 fi
 
 doit make maintainer-clean
